--- a/9_positioning/1_floating_elements/styles.css
+++ b/9_positioning/1_floating_elements/styles.css
@@ -44,16 +44,19 @@ div {
 .static-parent {
   position: static;
 }
+
 .relative-parent {
   position: relative;
   top: 20px;
-  right: 50px;
+  left: 50px;
 }
+
 .absolute-parent {
   position: absolute;
   bottom: 20px;
   right: 50px;
 }
+
 .fixed-parent {
   position: fixed;
   bottom: 20px;
