--- a/9_positioning/4_layout_with_float/styles.css
+++ b/9_positioning/4_layout_with_float/styles.css
@@ -7,6 +7,7 @@ footer {
 }
 .footer {
   background-color: green;
+  clear: both;
 }
 
 .content {
@@ -18,5 +19,7 @@ footer {
 
 .sidebar {
   height: 500px;
+  float: left;
+  width: 20%;
   background-color: gray;
 }
