--- a/9_positioning/5_position/styles.css
+++ b/9_positioning/5_position/styles.css
@@ -14,7 +14,7 @@
 .nav-item {
   position: relative;
   top: 10px;
-  padding-left: 16px;
+  margin-left: 16px;
   display: inline-block;
   color: white;
 }
