--- a/9_positioning/5_position/styles.css
+++ b/9_positioning/5_position/styles.css
@@ -2,38 +2,58 @@
   box-sizing: border-box;
 }
 .header {
-  position: absolute;
+  position: fixed;
   height: 40px;
   width: 100%;
   background-color: darkturquoise;
+  z-index: 999;
 }
 .nav-list {
   margin: 0px;
+  height: 100%;
+  align-items: center;
 }
 
 .nav-item {
-  height: 40px;
-  position: relative;
-  top: 10px;
+  /* height: 40px; */
+  line-height: 40px;
   margin-left: 16px;
   display: inline-block;
   color: white;
+  text-align: center;
 }
 .content {
   height: 5000px;
   background-color: beige;
 }
-/* .head {
+
+.head {
   position: relative;
-  top: calc(100%-2500);
+  top: calc(100% - 2500px);
+  left: 50%;
   width: 200px;
   height: 200px;
   background-color: aquamarine;
 }
 .ear {
-  width: 60px;
-  height: 40px;
+  position: absolute;
+  width: 40px;
+  height: 60px;
   background-color: brown;
+}
+.ear {
+  position: relative;
+  width: 40px;
+  height: 60px;
+  background-color: brown;
+}
+.ear_right {
+  top: -60px;
+  right: -200px;
+}
+.ear_left {
+  top: -120px;
+  left: -40px;
 }
 .eye {
   width: 30px;
@@ -41,8 +61,15 @@
   border-radius: 100%;
   background-color: grey;
 }
-
 .eye_left {
   position: absolute;
   float: left;
-} */
+  top: 80px;
+  left: 40px;
+}
+.eye_right {
+  position: absolute;
+  float: left;
+  top: 80px;
+  right: 40px;
+}
