--- a/9_positioning/5_position/styles.css
+++ b/9_positioning/5_position/styles.css
@@ -15,7 +15,7 @@
 .nav-item {
   line-height: 40px;
   margin-left: 16px;
-  display: inline-block;
+  display: inline;
   color: white;
 }
 .content {
