--- a/9_positioning/5_position/styles.css
+++ b/9_positioning/5_position/styles.css
@@ -13,12 +13,11 @@
 }
 
 .nav-item {
+  color: white;
   line-height: 40px;
+  text-align: center;
   margin-left: 16px;
   display: inline-block;
-  color: white;
-  margin-right: 0px;
-  padding-right: 0px;
 }
 .content {
   height: 5000px;
