--- a/9_positioning/5_position/styles.css
+++ b/9_positioning/5_position/styles.css
@@ -10,12 +10,14 @@
   margin: 0px;
   height: 100%;
   align-items: center;
+  font-size: 0px;
 }
 
 .nav-item {
   color: white;
   line-height: 40px;
   margin-left: 16px;
+  font-size: 16px;
   display: inline-block;
 }
 .content {
