--- a/10_flexbox/2_flex_elements/styles.css
+++ b/10_flexbox/2_flex_elements/styles.css
@@ -1,11 +1,12 @@
-.container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .block {
   height: 100px;
   width: 100px;
+  margin: 8px;
   flex-shrink: 1;
   flex-wrap: 1;
+  flex-grow: 1;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
 }
