--- a/10_flexbox/3_flexbox_layout/styles.css
+++ b/10_flexbox/3_flexbox_layout/styles.css
@@ -11,12 +11,13 @@
 }
 .navigation {
   margin: 0;
+  padding: 0;
   display: flex;
   list-style-type: none;
 }
 .navigation-item {
   list-style-type: none;
-  margin-left: 16px;
+  padding-left: 16px;
 }
 .content {
   flex-grow: 1;
