--- a/10_flexbox/3_flexbox_layout/styles.css
+++ b/10_flexbox/3_flexbox_layout/styles.css
@@ -35,7 +35,12 @@
   width: 200px;
   background-color: gray;
 }
+ul {
+  padding: 0;
+}
 .news-header {
+  margin: 0;
+  margin-top: 16px;
   display: flex;
   justify-content: center;
   line-height: 40px;
