--- a/10_flexbox/3_flexbox_layout/styles.css
+++ b/10_flexbox/3_flexbox_layout/styles.css
@@ -37,10 +37,11 @@
 }
 ul {
   padding: 0;
+  margin: 0;
 }
 .news-header {
   margin: 0;
-  margin-top: 16px;
+  margin-top: 13px;
   display: flex;
   justify-content: center;
   line-height: 40px;
