--- a/10_flexbox/3_flexbox_layout/styles.css
+++ b/10_flexbox/3_flexbox_layout/styles.css
@@ -3,6 +3,14 @@
   flex-direction: column;
   min-height: 100vh;
 }
+ul {
+  padding: 0;
+  margin: 0;
+}
+h2 {
+  margin: 0;
+  padding: 0;
+}
 .header {
   display: flex;
   height: 40px;
@@ -35,15 +43,10 @@
   width: 200px;
   background-color: gray;
 }
-ul {
-  padding: 0;
-  margin: 0;
-}
 .news-header {
-  margin: 0;
-  margin-top: 13px;
   display: flex;
   justify-content: center;
+  margin-top: 16px;
   line-height: 40px;
 }
 .news-item {
