--- a/10_flexbox/4_block_in_one_line/styles.css
+++ b/10_flexbox/4_block_in_one_line/styles.css
@@ -1,6 +1,10 @@
-.block {
+body {
   display: flex;
+}
+.block {
   height: 300px;
+  width: 100vh;
+  flex-direction: column;
 }
 .block_red {
   background-color: red;
