--- a/10_flexbox/5_flex_articles/styles.css
+++ b/10_flexbox/5_flex_articles/styles.css
@@ -1,3 +1,8 @@
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
 header {
   display: flex;
   align-items: center;
@@ -6,12 +11,13 @@ header {
 .articles-list {
   display: flex;
   flex-wrap: wrap;
-  flex-grow: 1;
+  flex-shrink: 0;
 }
 
 .article {
   flex-direction: column;
   flex-basis: 300px;
+  flex-grow: 1;
 
   margin: 8px;
   padding: 16px;
