--- a/10_flexbox/5_flex_articles/styles.css
+++ b/10_flexbox/5_flex_articles/styles.css
@@ -10,7 +10,7 @@ header {
 .articles-list {
   display: flex;
   flex-wrap: wrap;
-  min-height: 100vh;
+  height: 100vh;
 }
 .article {
   flex-direction: column;
