--- a/11_visibility/3_dropdown/styles.css
+++ b/11_visibility/3_dropdown/styles.css
@@ -2,11 +2,13 @@
   box-sizing: border-box;
 }
 .dropdown {
+  display: flex;
   margin: 16px;
+  height: 50px;
+  position: relative;
 }
 
 .menu-button {
-  position: relative;
   padding: 16px;
   background-color: darkgreen;
   opacity: 0.8;
@@ -14,27 +16,30 @@
   color: white;
   cursor: pointer;
 }
-.menu-button:hover {
-  opacity: 1;
-}
 .menu-list {
   display: none;
 }
 .menu-list {
   top: 50px;
   position: absolute;
-  overflow: hidden;
-  list-style-type: none;
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-  background-color: lightcyan;
   min-width: 120px;
   z-index: 1;
   margin: 0;
   padding: 0;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+  background-color: lightcyan;
+  color: black;
 }
 .menu-item {
   padding: 16px;
+  list-style-type: none;
+}
+.menu-button:hover {
+  opacity: 1;
 }
 .dropdown:hover .menu-list {
   display: block;
+}
+.menu-item:hover {
+  background-color: ghostwhite;
 }
