--- a/11_visibility/3_dropdown/styles.css
+++ b/11_visibility/3_dropdown/styles.css
@@ -2,9 +2,8 @@
   box-sizing: border-box;
 }
 .dropdown {
-  display: flex;
+  display: inline;
   margin: 16px;
-  height: 50px;
   position: relative;
 }
 
