--- a/11_visibility/4_tooltip/styles.css
+++ b/11_visibility/4_tooltip/styles.css
@@ -1,9 +1,30 @@
-.gallery {
-  display: flex;
-  cursor: all-scroll;
-  overflow: auto;
+* {
+  box-sizing: border-box;
 }
 
-img {
-  margin: 8px;
+.text {
+  display: inline-block;
+  position: relative;
+  margin: 16px;
+  border-bottom: 1px dotted black;
 }
+
+/* .tooltip {
+  display: none;
+} */
+
+.tooltip {
+  margin: 0;
+  padding: 0;
+  position: relative;
+  left: -50;
+  bottom: -40px;
+  border-radius: 4px;
+  padding: 8px;
+  background-color: gray;
+  color: white;
+}
+
+/* .text:hover .tooltip {
+  display: inline;
+} */
