--- a/11_visibility/4_tooltip/styles.css
+++ b/11_visibility/4_tooltip/styles.css
@@ -1,30 +1,12 @@
-* {
-  box-sizing: border-box;
-}
-
-.text {
+div {
   display: inline-block;
-  position: relative;
   margin: 16px;
-  border-bottom: 1px dotted black;
 }
-
-/* .tooltip {
-  display: none;
-} */
-
 .tooltip {
-  margin: 0;
-  padding: 0;
   position: relative;
-  left: -50;
-  bottom: -40px;
-  border-radius: 4px;
-  padding: 8px;
   background-color: gray;
   color: white;
+  border-radius: 4px;
+  padding: 8px;
+  bottom: -40px;
 }
-
-/* .text:hover .tooltip {
-  display: inline;
-} */
