--- a/11_visibility/4_tooltip/styles.css
+++ b/11_visibility/4_tooltip/styles.css
@@ -1,12 +1,21 @@
-div {
+.text {
+  position: relative;
   display: inline-block;
   margin: 16px;
+  border-bottom: 1px dotted;
+}
+
+.tooltip {
+  display: none;
 }
 .tooltip {
-  position: relative;
+  position: absolute;
   background-color: gray;
   color: white;
   border-radius: 4px;
   padding: 8px;
   bottom: -40px;
+}
+.text:hover .tooltip {
+  display: block;
 }
