--- a/11_visibility/3_dropdown/styles.css
+++ b/11_visibility/3_dropdown/styles.css
@@ -2,43 +2,39 @@
   box-sizing: border-box;
 }
 .dropdown {
-  display: inline;
+  display: inline-block;
   margin: 16px;
-  position: relative;
-}
-
-.menu-button {
   padding: 16px;
   background-color: darkgreen;
   opacity: 0.8;
-  font-size: 16px;
   color: white;
   cursor: pointer;
 }
-.menu-list {
-  display: none;
+.menu-button {
+  position: relative;
+  font-size: 16px;
 }
 .menu-list {
-  top: 50px;
+  display: none;
   position: absolute;
-  min-width: 120px;
-  z-index: 1;
-  margin: 0;
-  padding: 0;
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
   background-color: lightcyan;
   color: black;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+  min-width: 120px;
+  z-index: 1;
+  padding: 0;
+  margin: 0;
 }
 .menu-item {
   padding: 16px;
   list-style-type: none;
 }
-.menu-button:hover {
+.dropdown:hover {
   opacity: 1;
-}
-.dropdown:hover .menu-list {
-  display: block;
 }
 .menu-item:hover {
   background-color: ghostwhite;
+}
+.dropdown:hover .menu-list {
+  display: block;
 }
