--- a/11_visibility/3_dropdown/styles.css
+++ b/11_visibility/3_dropdown/styles.css
@@ -2,17 +2,18 @@
   box-sizing: border-box;
 }
 .dropdown {
-  position: relative;
   display: inline-block;
   margin: 16px;
-  padding: 16px;
-  background-color: darkgreen;
-  opacity: 0.8;
-  color: white;
-  cursor: pointer;
 }
 .menu-button {
+  padding: 16px;
+  display: inline-block;
+  position: relative;
   font-size: 16px;
+  opacity: 0.8;
+  background-color: darkgreen;
+  color: white;
+  cursor: pointer;
 }
 .menu-list {
   display: none;
