--- a/12_styling/2_text_align/styles.css
+++ b/12_styling/2_text_align/styles.css
@@ -4,7 +4,8 @@ html {
 h1 {
   font-size: 74px;
   text-align: center;
-  width: 50%;
+  width: 50vw;
+  margin: auto;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
