--- a/14_cascade_style_sheet/1_first/styles.css
+++ b/14_cascade_style_sheet/1_first/styles.css
@@ -4,7 +4,9 @@ html {
 .properties-list {
   color: #f39;
   font-size: 24px;
-  padding: 8px;
   list-style-type: none;
+}
+.properties-list__item {
+  padding: 8px;
   line-height: 32px;
 }
