--- a/14_cascade_style_sheet/1_first/styles.css
+++ b/14_cascade_style_sheet/1_first/styles.css
@@ -9,7 +9,9 @@ html {
   list-style-type: none;
   line-height: 32px;
   font-size: 24px;
+  padding: 0;
 }
 .properties-list__item {
+  margin: 0px;
   padding: 8px;
 }
