--- a/14_cascade_style_sheet/2_sec/styles.css
+++ b/14_cascade_style_sheet/2_sec/styles.css
@@ -1,7 +1,9 @@
 div {
   background-color: blueviolet !important;
 }
+.text {
+  font-size: 24px;
+}
 .new::first-letter {
   color: green;
-  font-size: 24px !important;
 }
