--- a/14_cascade_style_sheet/1_first/styles.css
+++ b/14_cascade_style_sheet/1_first/styles.css
@@ -1,10 +1,13 @@
 html {
   font-size: 18px;
 }
+.properties-list {
+  padding: 8px;
+}
 .properties-list__item {
   color: #f39;
   line-height: 32px;
-  padding: 8px;
+
   margin: 0px;
   font-size: 24px;
   list-style-type: none;
