--- a/14_cascade_style_sheet/1_first/styles.css
+++ b/14_cascade_style_sheet/1_first/styles.css
@@ -6,6 +6,7 @@ html {
   line-height: 32px;
 }
 .properties-list__item {
+  padding: 8px;
   color: #f39;
   font-size: 24px;
   list-style-type: none;
