--- a/14_cascade_style_sheet/1_first/styles.css
+++ b/14_cascade_style_sheet/1_first/styles.css
@@ -3,10 +3,12 @@ html {
 }
 .properties-list {
   line-height: 32px;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 .properties-list__item {
   padding: 8px;
+  margin: 0px;
   color: #f39;
   font-size: 24px;
   list-style-type: none;
