--- a/14_cascade_style_sheet/1_first/styles.css
+++ b/14_cascade_style_sheet/1_first/styles.css
@@ -1,10 +1,12 @@
 html {
   font-size: 18px;
 }
-.properties-list__item {
-  padding: 8px;
+.properties-list {
   color: #f39;
   list-style-type: none;
   line-height: 32px;
   font-size: 24px;
+}
+.properties-list__item {
+  padding: 8px;
 }
