--- a/15_multimedia/1_img_tag/styles.css
+++ b/15_multimedia/1_img_tag/styles.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
 }
-.image-container img {
+.main-image {
   max-width: 100%;
   border-radius: 20px;
   margin: 50px auto;
