--- a/15_multimedia/practice/2_practice/styles.css
+++ b/15_multimedia/practice/2_practice/styles.css
@@ -1,7 +1,7 @@
 .video {
-  max-width: 100%;
+  width: 500px;
   height: auto;
   margin: 0 auto;
-  margin-top: 150px;
+  margin-top: 200px;
   display: block;
 }
