--- a/15_multimedia/4_img_again/styles.css
+++ b/15_multimedia/4_img_again/styles.css
@@ -10,18 +10,18 @@
   position: relative;
 }
 .image-button {
-  width: 250px;
+  width: 200px;
   height: 50px;
   background-color: bisque;
   position: absolute;
   top: calc(50% - 25px);
   left: calc(50% - 100px);
-  font-size: 12;
   text-transform: uppercase;
+  font-size: 12px;
+  line-height: 50px;
   font-weight: 700;
   opacity: 0.5;
   text-align: center;
-  line-height: 50px;
 }
 .image-button:hover {
   opacity: 1;
