--- a/16_forms/practice/2/styles.css
+++ b/16_forms/practice/2/styles.css
@@ -19,5 +19,5 @@ input[type='checkbox'] {
   font-size: 24px;
 }
 .checkbox input:checked + .checkmark {
-  background-color: green;
+  background-color: #006400;
 }
