--- a/16_forms/4_login_form/styles.css
+++ b/16_forms/4_login_form/styles.css
@@ -1,54 +1,44 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   background-color: bisque;
-}
-
-.page {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.form-title {
-  text-transform: uppercase;
-  align-items: center;
-}
-.login-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 300px;
-  padding: 16px;
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-  background-color: aqua;
   font-size: 16px;
   font-family: monospace;
 }
+.page {
+  display: block;
+  margin: 0 auto;
+  width: 300px;
+  padding: 16px;
+  background-color: aqua;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+}
 .form-control {
   padding-bottom: 8px;
+}
+.form-label {
+  padding-bottom: 4px;
 }
 .form-input {
   width: 100%;
   height: 32px;
   border-radius: 4px;
   border: 1px solid #808080;
-  padding: 4px;
-  outline: none;
-}
-.form-label {
-  padding-bottom: 4px;
 }
 
+.form-title {
+  text-transform: uppercase;
+  text-align: center;
+}
 .submit-button {
   width: 100%;
   height: 32px;
-  margin-top: 16px;
   background-color: #ff7f50;
-  /* padding-top: 16px; */
+  margin-top: 16px;
   text-transform: uppercase;
-  color: white;
   border-radius: 4px;
+  color: white;
+  border: none;
 }
