--- a/16_forms/4_login_form/styles.css
+++ b/16_forms/4_login_form/styles.css
@@ -8,24 +8,30 @@ body {
   font-family: monospace;
 }
 .page {
-  display: block;
+  display: flex;
   margin: 0 auto;
   width: 300px;
-  padding: 16px;
+
   background-color: aqua;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+  outline: none;
 }
+.login-form {
+  padding: 16px;
+}
+
 .form-control {
   padding-bottom: 8px;
 }
 .form-label {
-  padding-bottom: 4px;
+  margin-bottom: 4px;
 }
 .form-input {
   width: 100%;
   height: 32px;
   border-radius: 4px;
   border: 1px solid #808080;
+  margin-top: 4px;
 }
 
 .form-title {
@@ -40,5 +46,4 @@ body {
   text-transform: uppercase;
   border-radius: 4px;
   color: white;
-  border: none;
 }
