--- a/16_forms/4_login_form/styles.css
+++ b/16_forms/4_login_form/styles.css
@@ -8,29 +8,23 @@ body {
   font-family: monospace;
 }
 .page {
-  display: flex;
-  position: absolute;
-  top: calc(50% - 150px);
-  left: 50%;
+  display: block;
+  margin: 0 auto;
   width: 300px;
   padding: 16px;
   background-color: aqua;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-  outline: none;
 }
-
 .form-control {
   padding-bottom: 8px;
 }
-.form-label {
-  margin-bottom: 4px;
-}
+
 .form-input {
+  margin-top: 4px;
   width: 100%;
   height: 32px;
   border-radius: 4px;
   border: 1px solid #808080;
-  margin-top: 4px;
 }
 
 .form-title {
