--- a/16_forms/4_login_form/styles.css
+++ b/16_forms/4_login_form/styles.css
@@ -16,15 +16,15 @@ body {
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
 }
 .form-control {
-  padding-bottom: 8px;
+  padding-bottom: 4px;
 }
 
 .form-input {
-  margin-top: 4px;
   width: 100%;
   height: 32px;
   border-radius: 4px;
   border: 1px solid #808080;
+  margin-bottom: 8px;
 }
 
 .form-title {
