--- a/16_forms/4_login_form/styles.css
+++ b/16_forms/4_login_form/styles.css
@@ -15,7 +15,9 @@ body {
   background-color: aqua;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
 }
-.form-control {
+
+.form-label {
+  display: inline-block;
   padding-bottom: 4px;
 }
 
