--- a/16_forms/4_login_form/styles.css
+++ b/16_forms/4_login_form/styles.css
@@ -21,12 +21,15 @@ body {
   padding-bottom: 4px;
 }
 
+.form-control {
+  margin-bottom: 8px;
+}
+
 .form-input {
   width: 100%;
   height: 32px;
   border-radius: 4px;
   border: 1px solid #808080;
-  margin-bottom: 8px;
 }
 
 .form-title {
