--- a/16_forms/5_big-form/styles.css
+++ b/16_forms/5_big-form/styles.css
@@ -11,3 +11,12 @@ form {
 .languages {
   display: inline;
 }
+textarea {
+  margin-left: 8px;
+}
+input[type='radio'] {
+  display: inline-block;
+}
+select {
+  margin-left: 8px;
+}
