--- a/16_forms/5_big-form/styles.css
+++ b/16_forms/5_big-form/styles.css
@@ -1,12 +1,13 @@
 * {
   box-sizing: border-box;
 }
-input {
-  display: block;
-  margin: 8px;
-}
+
 form {
   margin: 32px;
+}
+input {
+  display: block;
+  margin-top: 8px;
 }
 .languages {
   display: inline;
