--- a/16_forms/4_login_form/styles.css
+++ b/16_forms/4_login_form/styles.css
@@ -22,7 +22,7 @@ body {
 }
 
 .form-label {
-  padding-bottom: 4px;
+  margin-bottom: 4px;
 }
 
 .form-control {
@@ -40,6 +40,7 @@ body {
   text-transform: uppercase;
   text-align: center;
 }
+
 .submit-button {
   width: 100%;
   height: 32px;
