--- a/17_tables/2_table_style/styles.css
+++ b/17_tables/2_table_style/styles.css
@@ -2,32 +2,17 @@
   box-sizing: border-box;
 }
 
-caption {
-  margin-bottom: 8px;
-}
-
 table {
   border-collapse: collapse;
   width: 500px;
-  margin: 32px;
+  margin: 16px;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-div {
-  overflow-x: auto;
-}
-
-thead {
-  background-color: aqua;
-}
-
-td {
-  padding: 4px;
 }
 
 th,
 td {
   line-height: 40px;
+  padding: 4px;
   text-align: right;
   border: 1px solid black;
 }
@@ -41,6 +26,27 @@ tbody > tr:hover {
   color: white;
 }
 
+tbody > tr:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
+tbody > tr:hover {
+  background-color: #aaa;
+  color: white;
+}
+
+thead {
+  background-color: aqua;
+}
+
 tfoot {
   font-weight: 700;
+}
+
+caption {
+  margin-bottom: 8px;
+}
+
+div {
+  overflow-x: auto;
 }
