--- a/17_tables/2_table_style/styles.css
+++ b/17_tables/2_table_style/styles.css
@@ -11,10 +11,13 @@ table {
 
 th,
 td {
-  line-height: 40px;
   padding: 4px;
   text-align: right;
   border: 1px solid black;
+}
+
+tr {
+  line-height: 40px;
 }
 
 tbody > tr:nth-child(odd) {
