--- a/17_tables/2_table_style/styles.css
+++ b/17_tables/2_table_style/styles.css
@@ -7,7 +7,6 @@ table {
   width: 500px;
   margin: 16px;
   font-family: Arial, Helvetica, sans-serif;
-  line-height: 40px;
 }
 
 th,
@@ -15,6 +14,10 @@ td {
   padding: 4px;
   text-align: right;
   border: 1px solid black;
+}
+
+tr {
+  line-height: 40px;
 }
 
 tbody > tr:nth-child(odd) {
