--- a/17_tables/2_table_style/styles.css
+++ b/17_tables/2_table_style/styles.css
@@ -1,55 +1,44 @@
-* {
-  box-sizing: border-box;
-}
-
 table {
-  border-collapse: collapse;
   width: 500px;
   margin: 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-th,
-td {
-  padding: 4px;
-  text-align: right;
+table,
+td,
+th {
   border: 1px solid black;
+  border-collapse: collapse;
 }
 
-td {
+td,
+th {
   line-height: 40px;
+  text-align: right;
+  padding: 4px;
 }
 
-tbody > tr:nth-child(odd) {
-  background-color: #f2f2f2;
-}
-
-tbody > tr:hover {
-  background-color: #aaa;
-  color: white;
-}
-
-tbody > tr:nth-child(odd) {
-  background-color: #f2f2f2;
-}
-
-tbody > tr:hover {
-  background-color: #aaa;
-  color: white;
+caption {
+  margin: 8px;
 }
 
 thead {
   background-color: aqua;
 }
 
+div {
+  overflow-x: auto;
+}
+
 tfoot {
   font-weight: 700;
 }
 
-caption {
-  margin-bottom: 8px;
+tbody > tr:nth-child(odd) {
+  background-color: #f2f2f2;
 }
 
-div {
-  overflow-x: auto;
+tbody > tr:hover {
+  background-color: #aaa;
+  color: #fff;
 }
