--- a/17_tables/2_table_style/styles.css
+++ b/17_tables/2_table_style/styles.css
@@ -1,37 +1,20 @@
+* {
+  box-sizing: border-box;
+}
+
 table {
+  border-collapse: collapse;
   width: 500px;
   margin: 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-table,
-td,
-th {
-  border: 1px solid black;
-  border-collapse: collapse;
-}
-
-td,
-th {
-  line-height: 40px;
-  text-align: right;
+th,
+td {
+  height: 40px;
   padding: 4px;
-}
-
-caption {
-  margin: 8px;
-}
-
-thead {
-  background-color: aqua;
-}
-
-div {
-  overflow-x: auto;
-}
-
-tfoot {
-  font-weight: 700;
+  text-align: right;
+  border: 1px solid black;
 }
 
 tbody > tr:nth-child(odd) {
@@ -40,5 +23,30 @@ tbody > tr:nth-child(odd) {
 
 tbody > tr:hover {
   background-color: #aaa;
-  color: #fff;
+  color: white;
+}
+
+tbody > tr:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
+tbody > tr:hover {
+  background-color: #aaa;
+  color: white;
+}
+
+thead {
+  background-color: aqua;
+}
+
+tfoot {
+  font-weight: 700;
+}
+
+caption {
+  margin-bottom: 8px;
+}
+
+div {
+  overflow-x: auto;
 }
