--- a/18_icons_svg/2_use_like_icon_1/styles.css
+++ b/18_icons_svg/2_use_like_icon_1/styles.css
@@ -1,4 +1,5 @@
 .custom_button {
+  fill: white;
   margin: 64px;
   width: 200px;
   height: 50px;
@@ -14,11 +15,10 @@
 }
 
 .custom_button:hover {
-  color: green;
+  color: darkcyan;
 }
 
 .custom_button:hover > .bird {
-  color: darkcyan;
   fill: green;
 }
 
