--- a/18_icons_svg/3_use_like_icon_2/styles.css
+++ b/18_icons_svg/3_use_like_icon_2/styles.css
@@ -1,6 +1,10 @@
 * {
   box-sizing: border-box;
 }
+div {
+  margin: 0;
+  padding: 0;
+}
 .main {
   display: flex;
   justify-content: space-around;
