--- a/18_icons_svg/3_use_like_icon_2/styles.css
+++ b/18_icons_svg/3_use_like_icon_2/styles.css
@@ -2,12 +2,14 @@
   box-sizing: border-box;
 }
 
-
 div {
   margin: 0;
   padding: 0;
 }
 
+.fa {
+  display: block;
+}
 
 .main {
   display: flex;
