--- a/19_animation/3_loading/styles.css
+++ b/19_animation/3_loading/styles.css
@@ -11,14 +11,15 @@
 
 .spinner-text {
   position: relative;
+  opacity: 0.5;
   animation: blinking;
+  animation-duration: 2s;
   animation-delay: 2s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
 
 .rect {
-  display: block;
   position: absolute;
   width: 10px;
   height: 4px;
