--- a/19_animation/3_loading/styles.css
+++ b/19_animation/3_loading/styles.css
@@ -1,6 +1,8 @@
 .container {
   display: flex;
+  flex-direction: column;
   height: 100vh;
+  width: 100vw;
 }
 .spinner {
   font-family: monospace;
