--- a/19_animation/4_vip_div/styles.css
+++ b/19_animation/4_vip_div/styles.css
@@ -2,15 +2,21 @@
   box-sizing: border-box;
 }
 
+body {
+  height: 100vh;
+  width: 100vw;
+}
+
 .block {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   left: calc(50% - 125px);
   width: 250px;
   height: 100px;
   border-radius: 10px;
   background-color: coral;
-  animation: move;
-  animation-duration: 2s;
+  animation: move 2s;
   animation-timing-function: ease;
 }
 
@@ -27,9 +33,9 @@
 
 @keyframes move {
   from {
-    top: -100px;
+    top: 0;
   }
   to {
-    top: calc(50vh -50px);
+    top: 50vh;
   }
 }
