--- a/20_transormations/1_2d_transformations/styles.css
+++ b/20_transormations/1_2d_transformations/styles.css
@@ -2,5 +2,12 @@
   width: 100px;
   height: 100px;
   background-color: tomato;
-  transform: translate(200px, 100px) rotate(45deg) scale(1.5);
+  transform: translate(160px, 100px) rotate(45deg) scale(1.5);
+}
+.text {
+  display: inline;
+  margin: 30px;
+  padding: 7px;
+  background-color: #faebd7;
+  border-radius: 3px;
 }
