--- a/20_transormations/2_anim_with_delay/styles.css
+++ b/20_transormations/2_anim_with_delay/styles.css
@@ -1,7 +1,56 @@
+.container {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+}
+
 .fancy-button {
+  margin: auto;
   width: 150px;
   height: 50px;
   border-radius: 4px;
   border: none;
+  background-image: linear-gradient(45deg, yellow, red);
+  animation: jump 0.5s 0.4s ease-in-out, rotate 0.5s ease-in-out,
+    getOut 1s 2s ease forwards;
 }
 
+.text {
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: white;
+}
+
+@keyframes jump {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-40px);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes getOut {
+  from {
+    transform: translateX(0px);
+  }
+  to {
+    transform: translateX(2000px);
+  }
+}
