--- a/20_transormations/3_spinner/styles.css
+++ b/20_transormations/3_spinner/styles.css
@@ -4,7 +4,6 @@
   width: 100vw;
 }
 .spinner {
-
   margin: auto;
 }
 
@@ -16,7 +15,13 @@
 }
 
 .circle {
-  
+  width: 50px;
+  height: 50px;
+  border: 4px solid lightgray;
+  border-top-color: black;
+  border-radius: 50%;
+  margin-bottom: 8px;
+  animation: rotate 2s linear infinite;
 }
 
 @keyframes blinking {
@@ -28,5 +33,17 @@
   }
   100% {
     opacity: 0;
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
