--- a/20_transormations/3_spinner/styles.css
+++ b/20_transormations/3_spinner/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .container {
   display: flex;
   height: 100vh;
@@ -15,6 +19,8 @@
 }
 
 .circle {
+  display: flex;
+  justify-content: ;
   width: 50px;
   height: 50px;
   border: 4px solid lightgray;
