--- a/20_transormations/3_spinner/styles.css
+++ b/20_transormations/3_spinner/styles.css
@@ -8,6 +8,9 @@
   width: 100vw;
 }
 .spinner {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   margin: auto;
 }
 
@@ -19,8 +22,6 @@
 }
 
 .circle {
-  display: flex;
-  justify-content: ;
   width: 50px;
   height: 50px;
   border: 4px solid lightgray;
