--- a/20_transormations/1_2d_transformations/styles.css
+++ b/20_transormations/1_2d_transformations/styles.css
@@ -10,3 +10,9 @@
   background-color: tomato;
   transform: translate(200px, 100px) rotate(45deg) scale(1.5);
 }
+.text {
+  margin: 50px;
+  padding: 7px;
+  background-color: #faebd7;
+  border-radius: 3px;
+}
