--- a/20_transormations/1_2d_transformations/styles.css
+++ b/20_transormations/1_2d_transformations/styles.css
@@ -11,8 +11,9 @@
   transform: translate(200px, 100px) rotate(45deg) scale(1.5);
 }
 .text {
-  margin: 70px;
-  padding: 7px;
-  background-color: #faebd7;
-  border-radius: 3px;
+  margin: 0 32px;
+  padding: 8px;
+  background-color: antiquewhite;
+  display: inline-block;
+  border-radius: 4px;
 }
