--- a/21_responsive_layout/4_responsive_page/styles.css
+++ b/21_responsive_layout/4_responsive_page/styles.css
@@ -11,7 +11,7 @@ html {
 .header {
   display: flex;
   justify-content: center;
-  background-image: linear-gradient(65deg, yellow, red);
+  background-image: linear-gradient(60deg, red, orange);
   color: white;
 }
 
@@ -75,6 +75,7 @@ html {
   background-color: #808080;
   padding: 0.5em;
   margin-bottom: 0.5em;
+  color: white;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
