--- a/21_responsive_layout/4_responsive_page/styles.css
+++ b/21_responsive_layout/4_responsive_page/styles.css
@@ -49,7 +49,7 @@ html {
 .css-units {
   color: #8b0000;
   background-color: #e5e5e5;
-  font-size: 1.125rem;
+  font-size: 1.125em;
   font-weight: 700;
 }
 
