--- a/21_responsive_layout/4_responsive_page/styles.css
+++ b/21_responsive_layout/4_responsive_page/styles.css
@@ -9,9 +9,10 @@ html {
 }
 
 body {
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
-
 .header {
   display: flex;
   justify-content: center;
@@ -28,6 +29,7 @@ body {
 
 .main {
   display: flex;
+  flex: 1;
 }
 
 .navigation {
@@ -88,7 +90,6 @@ body {
 
 .nav-list-link {
   width: 100%;
-
   color: white;
   text-decoration: none;
 }
