--- a/22_adaptive_layout/1_media/styles.css
+++ b/22_adaptive_layout/1_media/styles.css
@@ -16,7 +16,7 @@
   background-color: #8a2be2;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (max-width: 600px) {
   .square {
     background-color: #ff7f50;
   }
