--- a/22_adaptive_layout/2_using_breakpoints/styles.css
+++ b/22_adaptive_layout/2_using_breakpoints/styles.css
@@ -12,10 +12,9 @@ span {
   margin: auto;
 }
 
-.nav {
+.navigation {
   display: flex;
   background-color: #ff7f50;
-  border-radius: 4px;
   min-height: 200px;
   flex: 1;
 }
@@ -23,8 +22,6 @@ span {
 .products-list {
   display: flex;
   background-color: #006400;
-  padding: 8px;
-  border-radius: 4px;
   min-height: 200px;
   flex: 1;
 }
@@ -32,14 +29,12 @@ span {
 .news {
   display: flex;
   background-color: #0ff;
-  padding: 8px;
-  border-radius: 4px;
   min-height: 200px;
 }
 
 @media screen and (max-width: 600px) {
-  .wrapper {
-    flex-direction: column;
+  .products {
+    flex-grow: 2;
   }
 }
 
@@ -50,13 +45,4 @@ span {
 }
 
 @media screen and (min-width: 900px) {
-  .nav {
-    min-height: 33vh;
-  }
-  .products-list {
-    min-height: 33vh;
-  }
-  .news {
-    min-height: 33vh;
-  }
 }
