--- a/22_adaptive_layout/2_using_breakpoints/styles.css
+++ b/22_adaptive_layout/2_using_breakpoints/styles.css
@@ -45,4 +45,19 @@ span {
 }
 
 @media screen and (min-width: 900px) {
+  .wrapper {
+    display: flex;
+  }
+  .products {
+    display: flex;
+  }
+  .navigation {
+    width: 33vw;
+  }
+  .products-list {
+    width: 33vw;
+  }
+  .news {
+    width: 33vw;
+  }
 }
