--- a/22_adaptive_layout/3_responsive_images/styles.css
+++ b/22_adaptive_layout/3_responsive_images/styles.css
@@ -1,8 +1,13 @@
 main {
   display: flex;
-  height: 100vh;
 }
 
 picture {
+  display: flex;
   margin: auto;
+}
+
+img {
+  max-height: 100%;
+  min-width: 100%;
 }
