--- a/23_preprocessors/2_/styles/index.scss
+++ b/23_preprocessors/2_/styles/index.scss
@@ -19,7 +19,7 @@
 .square {
   height: 100px;
   width: 100px;
-  margin: $unit * 2;
+  margin: $unit;
   background-color: #ff7f50;
 
   // @include for-extra-small {
