--- a/23_preprocessors/3_header_menu/styles.css
+++ b/23_preprocessors/3_header_menu/styles.css
@@ -20,7 +20,8 @@ html {
   cursor: pointer;
 }
 .menu__item {
-  margin-left: 8px;
+  padding-right: 8px;
+  padding-left: 8px;
   line-height: 3em;
   text-align: center;
 }
