--- a/24_foundation_layout/styles.css
+++ b/24_foundation_layout/styles.css
@@ -1,14 +1,49 @@
-body {
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
   font-family: 'Work Sans', sans-serif;
+  color: #2b292d;
 }
 
 .page {
   width: 1400px;
   margin: auto;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-.header {
-  width: 1140px;
-  height: 62px;
-  margin: auto;
+/* Navigation */
+
+.navigation {
+  margin-left: auto;
+  margin-top: 7px;
+  margin-right: 75px;
+}
+
+.navigation__item {
+  color: #2b292d;
+  text-decoration: none;
+  line-height: 25px;
+  font-size: 18px;
+  margin-right: 50px;
+}
+
+.navigation__item:last-child {
+  margin-right: 0;
+}
+
+.navigation__item_selected {
+  font-weight: 700;
+}
+
+.navigation__arrow {
+  display: inline-block;
+  height: 5px;
+  width: 8px;
+  background-image: url(./img/Arrow.png);
+  margin-left: 11px;
 }
