--- a/24_foundation_layout/headline.css
+++ b/24_foundation_layout/headline.css
@@ -1,53 +1,32 @@
 .headline {
-  display: flex;
-  margin: auto;
-  width: 1140px;
-  position: relative;
-  margin-top: 84px;
-  padding-bottom: 77px;
-}
-
-.headline__content {
-  position: absolute;
-  z-index: 1;
-}
-
-.headline__banner {
-  right: -105px;
-  top: 0;
-  position: relative;
-  width: 796px;
-  height: 448px;
-  margin-left: auto;
+  width: 100%;
 }
 
 .headline__title {
-  width: 754px;
-  height: 165px;
   font-weight: 700;
-  font-size: 80px;
-  letter-spacing: -0.5px;
-  line-height: 78px;
-  color: rgba(43, 41, 45, 1);
+  font-size: 50px;
+  line-height: 50px;
   margin: 0;
-  padding: 0;
-  z-index: 1;
 }
 
 .headline__description {
-  margin: 0;
-  padding: 0;
-  height: 102px;
-  width: 456px;
+  margin-top: 24px;
+  font-weight: 400;
   font-size: 24px;
   line-height: 34px;
-  margin-top: 34px;
-  z-index: 1;
 }
 
 .headline__actions {
-  display: flex;
-  margin-top: 58px;
+  margin-top: 30px;
+}
+
+.headline__content {
+  margin: 35px 15px 33px 15px;
+}
+
+.headline__banner {
+  width: 100%;
+  margin-bottom: 36px;
 }
 
 .headline__learn-more-btn {
@@ -59,6 +38,79 @@
   font-weight: 700;
   border-radius: 2px;
   border: none;
-  margin-left: 10px;
   cursor: pointer;
+  margin-top: 15px;
+}
+
+.headline__action-btn {
+  width: 100%;
+}
+
+@media screen and (min-width: 400px) {
+  .headline {
+    display: flex;
+    margin: auto;
+    width: 1140px;
+    position: relative;
+    margin-top: 84px;
+    padding-bottom: 77px;
+  }
+
+  .headline__content {
+    margin: 0;
+    position: absolute;
+    z-index: 1;
+  }
+
+  .headline__title {
+    width: 754px;
+    height: 165px;
+    font-weight: 700;
+    font-size: 80px;
+    letter-spacing: -0.5px;
+    line-height: 78px;
+    color: rgba(43, 41, 45, 1);
+    margin: 0;
+    padding: 0;
+    z-index: 1;
+  }
+
+  .headline__banner {
+    right: -105px;
+    top: 0;
+    position: relative;
+    width: 796px;
+    height: 448px;
+    margin-left: auto;
+  }
+
+  .headline__description {
+    margin: 0;
+    padding: 0;
+    height: 102px;
+    width: 456px;
+    font-size: 24px;
+    line-height: 34px;
+    margin-top: 34px;
+    z-index: 1;
+  }
+
+  .headline__actions {
+    display: flex;
+    margin-top: 58px;
+  }
+
+  .headline__learn-more-btn {
+    width: 160px;
+    height: 48px;
+    background-color: white;
+    color: #3040c4;
+    font-size: 18px;
+    font-weight: 700;
+    border-radius: 2px;
+    border: none;
+    margin-left: 10px;
+    cursor: pointer;
+    margin-top: 0px;
+  }
 }
