--- a/24_foundation_layout/styles.css
+++ b/24_foundation_layout/styles.css
@@ -9,41 +9,16 @@ html {
 }
 
 .page {
-  width: 1400px;
-  margin: auto;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  width: 100%;
+  overflow-x: hidden;
 }
 
-/* Navigation */
-
-.navigation {
-  margin-left: auto;
-  margin-top: 7px;
-  margin-right: 75px;
-}
-
-.navigation__item {
-  color: #2b292d;
-  text-decoration: none;
-  line-height: 25px;
-  font-size: 18px;
-  margin-right: 50px;
-}
-
-.navigation__item:last-child {
-  margin-right: 0;
-}
-
-.navigation__item_selected {
-  font-weight: 700;
-}
-
-.navigation__arrow {
-  display: inline-block;
-  height: 5px;
-  width: 8px;
-  background-image: url(./img/Arrow.png);
-  margin-left: 11px;
+@media screen and (min-width: 400px) {
+  .page {
+    width: 1400px;
+    margin: auto;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
 }
