--- a/24_foundation_layout/about.css
+++ b/24_foundation_layout/about.css
@@ -1,20 +1,15 @@
 .about {
-  display: flex;
+  padding: 46px 15px;
   width: 100%;
-  justify-content: space-between;
   background-color: rgba(244, 245, 247, 1);
-  padding: 77px 130px 76px 130px;
-  
 }
 
-.article {
-  width: 555px;
-  
+.article:last-child {
+  padding-top: 20px;
 }
 
 .article__title {
   margin: 0;
-  padding: 0;
   font-size: 22px;
   line-height: 32px;
   font-weight: 700;
@@ -23,5 +18,25 @@
 .article__text {
   margin: 0;
   padding: 0;
+  line-height: 32px;
+  font-size: 22px;
   margin-top: 6px;
+}
+
+@media screen and (min-width: 400px) {
+  .about {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    background-color: rgba(244, 245, 247, 1);
+    padding: 77px 130px 76px 130px;
+  }
+  .article {
+    width: 555px;
+  }
+
+  .article:last-child {
+    padding-top: 0px;
+  }
 }
